fix view link spacing

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -181,8 +181,8 @@ i {
   }
 }
 
-.spacelog-link {
-  padding-left: 50px;
+.view-link {
+  margin-left: 35px;
 }
 
 h3 {
